--- a/AggregatingStreams/bin/.gitignore
+++ b/AggregatingStreams/bin/.gitignore
@@ -1,1 +1,44 @@
+/A.class
+/B.class
+/C.class
+/Color.class
+/ColoredCircle.class
+/CompletableFutureExample$Recursive.class
+/CompletableFutureExample.class
+/DaemonTest.class
+/DeadLockInJava$1.class
+/DeadLockInJava$2.class
+/DeadLockInJava.class
+/Department.class
+/Employee.class
+/FutureExample$Recursive.class
+/FutureExample.class
+/Impl.class
+/Inter.class
+/Java8LambdaDebug.class
+/MyMonitorThread.class
+/NumberTest.class
+/Person.class
+/RejectedExecutionHandlerImpl.class
+/Shared.class
+/SimpleThreadPool.class
+/Solution2$1.class
+/Solution2.class
+/SystemUtil$1.class
+/SystemUtil.class
+/Test1.class
+/Test2.class
+/TestAddRemoveList1.class
+/TestAddRemoveList2.class
+/TestAddRemoveList3.class
+/TestAddRemoveList4.class
+/TestMain.class
+/TestMain2.class
+/TestMainUsingArrayList.class
+/TestMainUsingCopyOnWriteArrayList.class
+/WorkerPool.class
+/WorkerThread.class
+/com/
+/home/
 /org/
+/test/
